# mtga-reader

./: .gitignore  Cargo.toml  IL2CPP_RESEARCH_SUMMARY.md  MONO_GENERICS_NOTES.md  NOTES.md  README.md  card-database.js  debug.rs  debug_output.txt  index.d.ts  index.js  package-lock.json  package.json  test.js  try.js  try_card_database.js
.claude/: settings.local.json
.github/workflows/: CI.yml
__test__/: card-database.spec.mjs  index.spec.mjs  scanner-logic.spec.mjs
debug-ui/: README.md  index.html  package-lock.json  package.json
debug-ui/src/: App.css  App.jsx  index.css
debug-ui/src/components/: AssemblyBrowser.css  AssemblyBrowser.jsx  ClassExplorer.css  ClassExplorer.jsx  InstanceViewer.css  InstanceViewer.jsx  PathBreadcrumb.css  PathBreadcrumb.jsx
docs/: MACOS_IL2CPP_HANDOFF.md
mtga-reader-js/: index.d.ts  index.js  package.json
mtga-reader-js/scripts/: copy-native.js
node-test/: .gitignore  Cargo.toml  demo.js  index.d.ts  index.js  package-lock.json  package.json  test.js
node-test/scripts/: copy-binary.js
node-test/src/: lib.rs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: api.rs  constants.rs  debug.rs  field_definition.rs  lib.rs  main.rs  managed.rs  mono_class_kind.rs  mono_reader.rs  pe_reader.rs  queries.rs  session.rs  type_code.rs  type_definition.rs  type_info.rs  unity_version.rs
src/backend/: detection.rs  mod.rs  traits.rs
src/common/: class_kind.rs  mod.rs  type_code.rs
src/il2cpp/: field_definition.rs  macho_reader.rs  macos_memory.rs  metadata.rs  mod.rs  offsets.rs  reader.rs  type_definition.rs
src/mono/: field_definition.rs  mod.rs  offsets.rs  pe_reader.rs  reader.rs  scanner.rs  type_definition.rs
src/napi/: mod.rs
