[package]
name = "mtga-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi-derive = "2.16.3"
proc_mem = "0.1.6"
process-memory = "0.5.0"
read-process-memory = "0.1.6"
sysinfo = "0.30.7"
winapi = { version = "0.3.9", features = ["winuser", "winbase", "winnt", "psapi", "tlhelp32"] }
