[package]
edition = "2021"
name = "mtga-reader"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mtga_reader"
path = "src/lib.rs"

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
process-memory = "0.5.0"
read-process-memory = "0.1.6"
serde_json = "1.0.116"
sysinfo = "0.30.11"

[target.'cfg(windows)'.dependencies]
proc_mem = "0.1.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
