[package]
edition = "2021"
name = "mtga-reader"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mtga_reader"
path = "src/lib.rs"

[features]
default = ["mono", "il2cpp"]
mono = []
il2cpp = []

[dependencies]
is_elevated = "0.1.2"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
process-memory = "0.5.0"
read-process-memory = "0.1.6"
serde_json = "1.0.116"
sysinfo = "0.30.11"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
sudo = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
proc_mem = "0.1.6"
is_elevated = "0.1.2"
pelite = "0.10"
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "handleapi", "winnt"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"
libproc = "0.14"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
