[package]
name = "mtga-reader-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI for Node.js bindings (same versions as parent project)
napi = { version = "2.16.4", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.16.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reference to the main mtga-reader library (package name uses hyphen, lib name uses underscore)
mtga-reader = { path = ".." }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
